# cos4cloud/api/controllers/comments.js
@@ -1,6 +1,6 @@
-const CommentsService = require('../../services/comments.service')
 
 const addComment = (req, res) => {
+  const CommentsService = require('../../services/comments.service')
   const params = req.query;
   return CommentsService.add(req.path, params).then(aux => res.json(aux))
 }
