# cos4cloud/api/controllers/observation.js
@@ -1,7 +1,5 @@
-const MappingService = require('../../services/mapping.service')
-
 const observation = (req, res) => {
-  const params = req.query;
-  MappingService.getById(req.path, params).then(aux => res.json(aux))
+  const MappingService = require('../../services/mapping.service')
+  return MappingService.getById(req, res)
 }
-module.exports = {observation}
+module.exports = { observation }
